--- a/src/app/prs/user/user-login/user-login.component.html
+++ b/src/app/prs/user/user-login/user-login.component.html
@@ -13,7 +13,7 @@
                 <td><input [(ngModel)]="password" type="password" autocomplete="current-password"/></td>
             </tr>
             <tr>
-                <td class="text-danger fw-bold">{{ message }}&nbsp;</td>
+                <td colspan="2" class="text-danger fw-bold">{{ message }}&nbsp;</td>
             </tr>
         </tbody>
     </table>
