--- a/src/app/prs/request/request-view/request-view.component.html
+++ b/src/app/prs/request/request-view/request-view.component.html
@@ -17,25 +17,25 @@
                     <td>Justification</td>
                     <td><input [(ngModel)]="request.justification" [disabled]="isReadonly" /></td>
                 </tr>
-                <tr *ngIf="request.rejectionReason" class="text-danger fw-bold">
-                    <td>Rejection Reason</td>
-                    <td><input [(ngModel)]="request.rejectionReason" [disabled]="isReadonly" /></td>
+                <tr *ngIf="request.rejectionReason">
+                    <td class="text-danger fw-bold">Rejection Reason</td>
+                    <td><input [(ngModel)]="request.rejectionReason" class="text-danger fw-bold" [disabled]="isReadonly" /></td>
                 </tr>
                 <tr>
                     <td>Delivery Mode</td>
-                    <td><input [(ngModel)]="request.deliveryMode" type="password" [disabled]="isReadonly" /></td>
+                    <td><input [(ngModel)]="request.deliveryMode" [disabled]="isReadonly" /></td>
                 </tr>
                 <tr>
                     <td>Status</td>
-                    <td><input [(ngModel)]="request.status" [disabled]="isReadonly" /></td>
+                    <td><input [(ngModel)]="request.status" disabled /></td>
                 </tr>
                 <tr>
                     <td>Total</td>
-                    <td><input [(ngModel)]="request.total" [disabled]="isReadonly" /></td>
+                    <td><input [(ngModel)]="request.total" disabled /></td>
                 </tr>
                 <tr>
                     <td>Username</td>
-                    <td><input [ngModel]="request.user?.username" [disabled]="isReadonly" /></td>
+                    <td><input [ngModel]="request.user?.username" disabled /></td>
                 </tr>
             </tbody>
         </table>
