--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -27,11 +27,11 @@
                 </tr>
                 <tr>
                     <td>Status</td>
-                    <td><input [(ngModel)]="request.status" disabled /></td>
+                    <td><input [ngModel]="request.status" disabled /></td>
                 </tr>
                 <tr>
                     <td>Total</td>
-                    <td><input [(ngModel)]="request.total" disabled /></td>
+                    <td><input [ngModel]="request.total" disabled /></td>
                 </tr>
                 <tr>
                     <td>Username</td>
