finished the request review item

--- a/src/app/prs/request/request-reviews/request-reviews.component.html
+++ b/src/app/prs/request/request-reviews/request-reviews.component.html
@@ -24,7 +24,7 @@
                     <td>{{ request.total | currency}}</td>
                     <td>{{ request.user?.username }}</td>
                     <td>
-                        <a routerLink="/request/review/{{ request.id }}">Review</a>
+                        <a routerLink="/request/review/item/{{ request.id }}">Review</a>
                     </td>
                 </tr>
             </tbody>
