--- a/src/app/prs/user/user-login/user-login.component.html
+++ b/src/app/prs/user/user-login/user-login.component.html
@@ -1,23 +1,25 @@
 <div id="main">
-    <table>
-        <tbody>
-            <tr>
-                <td colspan="2" class="fw-bold fst-italic">Login</td>
-            </tr>
-            <tr>
-                <th>User name:</th>
-                <td><input [(ngModel)]="username" autocomplete="username"/></td>
-            </tr>
-            <tr>
-                <th>Password:</th>
-                <td><input [(ngModel)]="password" type="password" autocomplete="current-password"/></td>
-            </tr>
-            <tr>
-                <td colspan="2" class="text-danger fw-bold">{{ message }}&nbsp;</td>
-            </tr>
-        </tbody>
-    </table>
-    <div>
-        <button (click)="login()" class="btn btn-primary">Login</button>
-    </div>
+    <form>
+        <table>
+            <tbody>
+                <tr>
+                    <td colspan="2" class="fw-bold fst-italic">Login</td>
+                </tr>
+                <tr>
+                    <th>User name:</th>
+                    <td><input [(ngModel)]="username" name="username" autocomplete="username"/></td>
+                </tr>
+                <tr>
+                    <th>Password:</th>
+                    <td><input [(ngModel)]="password" type="password" name="password" autocomplete="current-password"/></td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="text-danger fw-bold">{{ message }}&nbsp;</td>
+                </tr>
+            </tbody>
+        </table>
+        <div>
+            <button (click)="login()" class="btn btn-primary">Login</button>
+        </div>
+    </form>
 </div>
